Added env param setrup

--- a/setup.yml
+++ b/setup.yml
@@ -6,8 +6,20 @@
     become: yse
     become_method: sudo
   - name: Clone myrepo
-    git: repo=https://github.com/yshapira/myrepo.git
+    git: repo=https://github.com/yshapira/myrepo.git update=no
          dest=~/myfiles/myrepo
   - name: Clone spring-petclinic
     git: repo=https://github.com/yshapira/spring-petclinic.git
          dest=~/myfiles/spring-petclinic
+  - name: Unarchive maven
+    unarchive: src="http://apache.spd.co.il/maven/maven-3/3.3.9/binaries/apache-maven-3.3.9-bin.tar.gz"  dest=~/maven copy=no
+  - name: set env param M2_HOME
+    lineinfile: dest=~/.bash_profile regexp="^M2_HOME=" line="M2_HOME=~/maven" insertbefore="^PATH="
+  - name: export env param M2_HOME
+    lineinfile: dest=~/.bash_profile regexp="^M2_HOME" line="export M2_HOME" insertafter="^M2_HOME="
+  - name: set env param M2
+    lineinfile: dest=~/.bash_profile regexp="^M2" insertafter="^M2_HOME" line="M2=$M2_HOME/bin"
+  - name: export env param M2
+    lineinfile: dest=~/.bash_profile regexp="^M2_HOME" line="export M2" insertafter="^M2="
+  - name: Add M2 to PATH
+    lineinfile: dest=~/.bash_profile regexp="^PATH=.*:$M2" insertafter="^PATH=" line="PATH=$PATH:$M2"
