--- a/setup.yml
+++ b/setup.yml
@@ -3,7 +3,7 @@
   - name: Install git
     yum: name=git state=latest 
     #sudo: yes
-    become: yse
+    become: yes
     become_method: sudo
   - name: Clone myrepo
     git: repo=https://github.com/yshapira/myrepo.git update=no
@@ -23,3 +23,16 @@
     lineinfile: dest=~/.bash_profile regexp="^M2_HOME" line="export M2" insertafter="^M2="
   - name: Add M2 to PATH
     lineinfile: dest=~/.bash_profile regexp="^PATH=.*:$M2" insertafter="^PATH=" line="PATH=$PATH:$M2"
+  - name: Install docker
+    yum: name=docker state=latest
+    become: yes
+    become_method: sudo
+  - name: Add docker group to ec2-user
+    user: append=yes groups=docker name=ec2-user
+    become: yes
+    become_method: sudo
+  - name: start Docker Service
+    service: name=docker state=started
+    become: yes
+    become_method: sudo
+
